--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>Letmeask</title>
+    <title>Letme Ask</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
