--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>Letme Ask</title>
+    <title>Letme Ask Gaming</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
